# nowplaying

./: .gitignore  .prettierrc.js  Cargo.toml  Justfile  LICENSE  README.md  bun.lockb  package.json  turbo.json
.github/workflows/: ci.yml  publish.yaml
bindings/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json
bindings/examples/: index.ts
bindings/src/: conversion.rs  lib.rs  monitoring.rs
lib/: Cargo.toml
lib/src/: lib.rs  main.rs  monitoring.rs
lib/src/linux/: media_player2_player.rs  media_player2_player.xml  mod.rs
lib/src/macos/: mod.rs
lib/src/windows/: mod.rs
scripts/: set-versions.sh
