[package]
name = "bindings"
version = "1.0.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nowplaying = { path = "../lib" }

[dependencies.napi]
version = "2"
default-features = false
# see https://nodejs.org/api/n-api.html#node-api-version-matrix
features = ["napi4"]

[dependencies.napi-derive]
version = "2"
features = ["type-def"]

[build-dependencies]
napi-build = "2"

# [profile.release]
# lto = true
# strip = "symbols"
