[package]
name = "nowplaying"
version = "0.1.0"
edition = "2024"
default-run = "nowplaying"


[dependencies]
# workspace
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# all
derive_more = { workspace = true, features = ["debug"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
futures = "0.3.31"
async-trait = "0.1.88"

# platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = [
  "Media",
  "Media_Control",
  "Media_Playback",
  "Foundation",
  "Foundation_Collections",
  "Storage_Streams",
] }
base64 = { version = "0.22.1" }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.5.0", features = ["tokio"] }
zvariant = { version = "5.4.0" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2" }
objc2-foundation = { version = "0.2.2", features = ["all"] }
block2 = { version = "0.5.1" }
core-foundation = { version = "0.10.0" }
dispatch2 = { version = "0.1.0" }
base64 = { version = "0.22.1" }
